# bluedia

./: .gitignore  LICENSE  README.md  io.github.codes.by.chetan.bluedia.yml  io.github.codes_by_chetan.bluedia.yml  meson.build  spotify_token.json
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/io.codes.by.chetan.bluedia/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/io.codes.by.chetan.bluedia.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-io.github.codes.by.chetan.bluedia.yml/: build-bluedia  build-python3-certifi  build-python3-charset-normalizer  build-python3-idna  build-python3-pillow  build-python3-requests  build-python3-urllib3  cleanup  finish  init
.flatpak-builder/cache/summaries/: 145bd5396cea73e8af5c664bb4b378fd1197cf08e41cebe8969b7cb86e4e115c-0dae922798ff0d07f5851b09758ae3ba9f033bcd40d70f40d1f116c068bd999d.delta  54819aafae24edf61274f9bca28190814249b8c135973518b67901a63fa9a51b-0dae922798ff0d07f5851b09758ae3ba9f033bcd40d70f40d1f116c068bd999d.delta  56aa29c1e7999414570f4c671f0fa6e783564ace90414aed3b4b55169b75a1a2-0dae922798ff0d07f5851b09758ae3ba9f033bcd40d70f40d1f116c068bd999d.delta  590e818075f1f79d7cef9123aa410308904c2006a1c04d37190183adea7368ce-0dae922798ff0d07f5851b09758ae3ba9f033bcd40d70f40d1f116c068bd999d.delta  b0e1edcfbf9e1f0851ada7056b5af667005bc62d01466d5cab39f1de56fe1408-0dae922798ff0d07f5851b09758ae3ba9f033bcd40d70f40d1f116c068bd999d.delta  f2cd04433e7ae6a25a021eed5afe3b769515cc18fe30811224eb2a3c852b31a9-0dae922798ff0d07f5851b09758ae3ba9f033bcd40d70f40d1f116c068bd999d.delta  f7f7b7362f511b49b542e2b136936d6a52833b38af1c242e8746647daa74f6f9-0dae922798ff0d07f5851b09758ae3ba9f033bcd40d70f40d1f116c068bd999d.delta
.flatpak-builder/checksums/: x86_64-io.github.codes.by.chetan.bluedia.yml
.flatpak-builder/downloads/85ec677246533e27770b0de5cf0f9d6e4ec0c212a1f89dfc941b64b21226009d/: Pillow-9.5.0-cp310-cp310-manylinux_2_28_x86_64.whl
.flatpak-builder/git/https_github.com_codes-by-chetan_bluedia.git/: FETCH_HEAD  config  shallow
.flatpak-builder/git/https_github.com_codes-by-chetan_bluedia.git/objects/pack/: pack-7672b0a945625146b69931519b55005cd1d17588.idx  pack-7672b0a945625146b69931519b55005cd1d17588.pack  pack-7672b0a945625146b69931519b55005cd1d17588.rev
data/: bluedia.desktop  bluedia.xml  bluetooth-media-controller.appdata.xml  bluetooth-media-controller.desktop  bluetooth-media-controller.metainfo.xml  com.codes-by-chetan.bluetooth-media-controller.appdata.xml  com.codes-by-chetan.bluetooth-media-controller.desktop  io.codes_by_chetan.bluedia.desktop  io.codes_by_chetan.bluedia.xml
debian/: changelog  control  copyright  rules
src/: bluedia.py  bluetooth-media-controller.py
temp Bluedia code/: meson.build
